--- a/src/app.yaml
+++ b/src/app.yaml
@@ -17,6 +17,12 @@ libraries:
   version: "2.6"
 - name: markupsafe
   version: "0.15"
+- name: lxml
+  version: "2.3.5"
+# - name: bs4
+#   version: "4.3.2"
+# - name: dateutil
+#   version: "1.5"
 
 inbound_services:
 - warmup
